--- a/package.json
+++ b/package.json
@@ -41,5 +41,8 @@
     "drizzle-kit": "^0.22.3",
     "postcss": "^8",
     "tailwindcss": "^3.4.1"
+  },
+  "resolutions": {
+    "@tensorflow/tfjs-converter": "^4.17.0"
   }
 }
